--- a/docs/sv/devtools/256-color-palette.tex
+++ b/docs/sv/devtools/256-color-palette.tex
@@ -108,7 +108,40 @@
     \newpage
 
     \color{sec1}
-    \section{}\color{text}
+    \section{Allmän presentation av datorskriptet}\color{text}
+
+    \color{sec2}
+    \subsection{Beskrivning av skriptet}\color{text}
+
+    \begin{justify}
+        Detta skript visar varje färgkod från XTERM-palettabellen på terminalens bakgrund i en 6*40-tabell, med koden som motsvarar varje färg skriven med tre siffror i förgrunden.
+    \end{justify}
+
+    % ------------
+
+    % ----------------------
+
+    % -----------------------------------------------
+
+    \color{sec2}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+
+    \color{sec2}
+    \subsection{Så fungerar skriptet}\color{text}
+
+    \begin{justify}
+        Om värdet "-h" eller "--help" skickas som första argument, visas ett enkelt meddelande som sammanfattar syftet med skriptet på terminalen, utan att exekvera huvudkoden som skrivits i \textbf{\color{loop}for}-loopen.
+    \end{justify}
+
+    \begin{justify}
+        Ce message s'affichera dans les langues suivantes selon la configuration de la variable d'environnement \textbf{\color{vars}\$LANG}. Il s'affichera en anglais si cette même variable ne stocke pas le code ISO 639-1 relatif à l'une de ces langues :
+    \end{justify}
+
+    \begin{justify}
+        \begin{itemize}
+            \item Allemand, anglais, espagnol, français, indonésien, portuguais, russe, suédois, turc, ukrainien et chinois.
+        \end{itemize}
+
+    \end{justify}
 
     % ------------
 
