--- a/docs/01 PRINTABLE/fr/devtools/256-color-palette.tex
+++ b/docs/01 PRINTABLE/fr/devtools/256-color-palette.tex
@@ -207,7 +207,7 @@
     \subsection{Affichage de la table de palette XTERM sur le terminal}\color{text}
 
     \begin{justify}
-    	\includegraphics[scale=0.5884]{../../00 DATA/img/XTERM palette table.png}
+    	\includegraphics[scale=0.5884]{../../../00 DATA/img/XTERM palette table.png}
     \end{justify}
 
     % ------------
