Unspaghettification of the framework's code

--- a/lib/lang/lang.csv
+++ b/lib/lang/lang.csv
@@ -504,11 +504,11 @@ __BU_MAIN_TEXT_LIB__MSG__GetSubStringBeforeDelim__3RD_ARG_MUST_BE_INT,"This vari
 ,,,,,,,,,,,,,,,,,,,,,,,
 __BU_MAIN_TEXT_FORMAT_LIB__MSG__,This variable stores the message that,,,,,,,,,,,,,,,,,,,,,,
 __BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__AQUA,This variable stores the message that,,,Aqua blue,,Bleu aquatique,,,,,,,,,,,,,,,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__BLACK,This variable stores the message that,,,Black,,Noir,,,,,,,,,,,,,,,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__BLUE,This variable stores the message that,,,Blue,,Bleu,,,,,,,,,,,,,,,,,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__BLACK,This variable stores the message that,,,Black,Nigra,Noir,,,,,,,,,,,,,,,,,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__BLUE,This variable stores the message that,,,Blue,Blua,Bleu,,,,,,,,,,,,,,,,,
 __BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__CYAN,This variable stores the message that,,,Cyan blue,,Bleu cyan,,,,,,,,,,,,,,,,,
 __BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__FUCHSIA,This variable stores the message that,,,Fuchsia,,Fuchsia,,,,,,,,,,,,,,,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__GRAY,This variable stores the message that,,,Gray,,Gris,,,,,,,,,,,,,,,,,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__GRAY,This variable stores the message that,,,Gray,Grizo,Gris,,,,,,,,,,,,,,,,,
 __BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__GREEN,This variable stores the message that,,,Green,,Vert,,,,,,,,,,,,,,,,,
 __BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__LIME,This variable stores the message that,,,Lime,,Citron vert,,,,,,,,,,,,,,,,,
 __BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__MAROON,This variable stores the message that,,,Maroon,,Marron,,,,,,,,,,,,,,,,,
